--- a/index.html
+++ b/index.html
@@ -54,6 +54,35 @@
         </div>
     </div>
     </section>
+
+    <section class="section__burger">
+         <div class="section__burger--relleno">
+            <img src="Sin-título-4.png" alt="">
+            <div class="section__burger--txs">
+                <h1 class="section__burger--title">Best Burger</h1>
+                <p class="section__burger--p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure quasi quae at, consectetur corporis veritatis.</p>
+                <button class="burger__buton">ORDER NOW</button>
+            </div>
+         </div>
+    </section>
+
+    <section class="section__hambur">
+        <div class="section__hambur--relleno">
+            <div class="section__hambur--txs">
+                <h1 class="section__hambur--title">Big Burger</h1>
+                <p class="section__hambur--p">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum repellat veritatis sequi nam aperiam in.</p>
+                <button class="header__button">ORDER NOW</button>
+            </div>
+            <img src="Sin-título-4.png" alt="">
+        </div>
+    </section>
+
+    <section class="section__estadisticas">
+        <div class="section__estadisticas--txs">
+            <h1 class="section__estadisticas--tilte">Statistics</h1>
+            <p class="section__estadisticas--p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi veniam iure ab ad sint doloribus.</p>
+        </div>
+    </section>
   </main>
 </body>
 
