--- a/index.html
+++ b/index.html
@@ -34,54 +34,58 @@
     <section class="section__chef">
       <div>
         <h1 class="section__chef--title">OUR CHEF</h1>
-        <p class="section__chef--p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis dolorum alias ea accusamus. Doloribus, veritatis!</p>
+        <p class="section__chef--p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis dolorum alias ea
+          accusamus. Doloribus, veritatis!</p>
       </div>
       <div class="section__chef--cards">
         <div class="chef__cards--1">
-            <img class="card__img" src="Sin-título-8.png" alt="">
-            <h3 class="card__title">AIDEN HUNTER</h3>
-            <P class="card__txt">Founder</P>
+          <img class="card__img" src="Sin-título-8.png" alt="">
+          <h3 class="card__title">AIDEN HUNTER</h3>
+          <P class="card__txt">Founder</P>
         </div>
         <div class="chef__cards--2">
-            <img class="card__img" src="Sin-título-9.png" alt="">
-            <H3 class="card__title">ETHEL RAMSEY</H3>
-            <P class="card__txt">Co-Funder</P>
+          <img class="card__img" src="Sin-título-9.png" alt="">
+          <H3 class="card__title">ETHEL RAMSEY</H3>
+          <P class="card__txt">Co-Funder</P>
         </div>
         <div class="chef__cards--3">
-            <img class="card__img" src="Sin-título-10.png" alt="">
-            <H3 class="card__title">FANNI STEWART</H3>
-            <P class="card__txt">Co-Funder</P>
+          <img class="card__img" src="Sin-título-10.png" alt="">
+          <H3 class="card__title">FANNI STEWART</H3>
+          <P class="card__txt">Co-Funder</P>
         </div>
-    </div>
+      </div>
     </section>
 
     <section class="section__burger">
-         <div class="section__burger--relleno">
-            <img src="Sin-título-4.png" alt="">
-            <div class="section__burger--txs">
-                <h1 class="section__burger--title">Best Burger</h1>
-                <p class="section__burger--p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure quasi quae at, consectetur corporis veritatis.</p>
-                <button class="burger__buton">ORDER NOW</button>
-            </div>
-         </div>
+      <div class="section__burger--relleno">
+        <img src="Sin-título-4.png" alt="">
+        <div class="section__burger--txs">
+          <h1 class="section__burger--title">Best Burger</h1>
+          <p class="section__burger--p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure quasi quae at,
+            consectetur corporis veritatis.</p>
+          <button class="burger__buton">ORDER NOW</button>
+        </div>
+      </div>
     </section>
 
     <section class="section__hambur">
-        <div class="section__hambur--relleno">
-            <div class="section__hambur--txs">
-                <h1 class="section__hambur--title">Big Burger</h1>
-                <p class="section__hambur--p">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum repellat veritatis sequi nam aperiam in.</p>
-                <button class="header__button">ORDER NOW</button>
-            </div>
-            <img src="Sin-título-4.png" alt="">
+      <div class="section__hambur--relleno">
+        <div class="section__hambur--txs">
+          <h1 class="section__hambur--title">Big Burger</h1>
+          <p class="section__hambur--p">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum repellat
+            veritatis sequi nam aperiam in.</p>
+          <button class="header__button">ORDER NOW</button>
         </div>
+        <img src="Sin-título-4.png" alt="">
+      </div>
     </section>
 
     <section class="section__estadisticas">
-        <div class="section__estadisticas--txs">
-            <h1 class="section__estadisticas--tilte">Statistics</h1>
-            <p class="section__estadisticas--p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi veniam iure ab ad sint doloribus.</p>
-        </div>
+      <div class="section__estadisticas--txs">
+        <h1 class="section__estadisticas--tilte">Statistics</h1>
+        <p class="section__estadisticas--p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi veniam iure
+          ab ad sint doloribus.</p>
+      </div>
     </section>
   </main>
 </body>
