--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 
   <main>
     <section class="section__chef">
-      <div>
+      <div class="section__chef--txs">
         <h1 class="section__chef--title">OUR CHEF</h1>
-        <p class="section__chef--p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis dolorum alias ea
-          accusamus. Doloribus, veritatis!</p>
+        <p class="section__chef--p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi veniam iure
+          ab ad sint doloribus..</p>
       </div>
       <div class="section__chef--cards">
         <div class="chef__cards--1">
@@ -76,7 +76,7 @@
             veritatis sequi nam aperiam in.</p>
           <button class="header__button">ORDER NOW</button>
         </div>
-        <img src="Sin-título-4.png" alt="">
+        <img class="section__hambur--img" src="Sin-título-15.png" alt="">
       </div>
     </section>
 
@@ -85,6 +85,70 @@
         <h1 class="section__estadisticas--tilte">Statistics</h1>
         <p class="section__estadisticas--p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi veniam iure
           ab ad sint doloribus.</p>
+      </div>
+      <div class="section__estadisticas--cards">
+        <div class="section__cards--1">
+          <img src="Sin-título-12.png" alt="">
+        </div>
+        <div class="section__cards--2">
+          <img src="Sin-título-13.png" alt="">
+        </div>
+        <div class="section__cards--3">
+          <img src="Sin-título-14.png" alt="">
+        </div>
+      </div>
+    </section>
+
+    <section class="section__populares">
+      <div class="section__populares--txt">
+        <h1 class="section__populares--title">Popular Packages</h1>
+      </div>
+      <div class="section__populares--cards">
+        <div class="populares__cards--1">
+          <div class="card__contenido">
+            <h3 class="populares__cards--title">PACKAGE I</h3>
+            <img class="populares__cards--img" src="Sin-título-11.png" alt="">
+            <p class="populares__cards--precio">10.00</p>
+            <p class="populares__cards--p">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <button class="populares__cards--boton">ORDER NOW</button>
+          </div>
+        </div>
+        <div class="populares__cards--2">
+          <div class="card__contenido">
+            <h3 class="populares__cards--title">PACKAGE II</h3>
+            <img class="populares__cards--img" src="Sin-título-11.png" alt="">
+            <p class="populares__cards--precio">20.00</p>
+            <p class="populares__cards--p">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <button class="populares__cards--boton">ORDER NOW</button>
+          </div>
+        </div>
+        <div class="populares__cards--3">
+          <div class="card__contenido">
+            <h3 class="populares__cards--title">PACKAGE III</h3>
+            <img class="populares__cards--img" src="Sin-título-11.png" alt="">
+            <p class="populares__cards--precio">30.00</p>
+            <p class="populares__cards--p">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <button class="populares__cards--boton">ORDER NOW</button>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section__fondo">
+       <div class="section__fondo--txs">
+        <p class="section__fondo--p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vivamus lacinia odio vitae vestibulum vestibulum</p>
+        <p class="section__fondo--autor"><b>BARRY HENDERSON</b></p>
+       </div>
+    </section>
+
+    <section class="section__actializacion">
+      <div class="section__actializacion--txs">
+        <h1 class="section__actializacion--title">Don't Miss Our Update</h1>
+        <p class="section__actializacion--p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vivamus lacinia odio vitae vestibulum vestibulum</p>
+        <div class="section__actializacion--boton">
+          <input class="actializacion__input--boton" type="email" placeholder="Your Email">
+          <button class="actializacion__boton" type="submit">SUBSCRIBE</button>
+        </div>
       </div>
     </section>
   </main>
