--- a/index.html
+++ b/index.html
@@ -152,6 +152,36 @@
       </div>
     </section>
   </main>
+  <footer class="footer">
+    <div class="footer__txs">
+      <h3 class="footer__title">Title Here</h3>
+      <p class="footer__p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae cupiditate iste saepe dolore minima ipsum? Praesentium mollitia odio et suscipit aliquam! Quasi!</p>
+    </div>
+    <div class="footer__list">
+      <ul class="footer__list--1">
+        <li><b>About</b></li>
+        <li>History</li>
+        <li>Our Team</li>
+        <li>Brand Guidelines</li>
+        <li>Terms & Condition</li>
+        <li>Privacy Policy</li>
+      </ul>
+      <ul class="footer__list--2">
+        <li><b>Services</b></li>
+        <li>How to Order</li>
+        <li>Our Product</li>
+        <li>Order Status</li>
+        <li>Promo</li>
+        <li>Payment Method</li>
+      </ul>
+      <ul class="footer__list--3">
+        <li><b>Other</b></li>
+        <li>Contact Us</li>
+        <li>Help</li>
+        <li>Privaciti</li>
+      </ul>
+    </div>
+  </footer>
 </body>
 
 </html>
