--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <link rel="stylesheet" href="style.css">
   <title>Document</title>
 </head>
@@ -135,16 +136,18 @@
     </section>
 
     <section class="section__fondo">
-       <div class="section__fondo--txs">
-        <p class="section__fondo--p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vivamus lacinia odio vitae vestibulum vestibulum</p>
+      <div class="section__fondo--txs">
+        <p class="section__fondo--p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vivamus lacinia odio
+          vitae vestibulum vestibulum</p>
         <p class="section__fondo--autor"><b>BARRY HENDERSON</b></p>
-       </div>
+      </div>
     </section>
 
     <section class="section__actializacion">
       <div class="section__actializacion--txs">
         <h1 class="section__actializacion--title">Don't Miss Our Update</h1>
-        <p class="section__actializacion--p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vivamus lacinia odio vitae vestibulum vestibulum</p>
+        <p class="section__actializacion--p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vivamus lacinia
+          odio vitae vestibulum vestibulum</p>
         <div class="section__actializacion--boton">
           <input class="actializacion__input--boton" type="email" placeholder="Your Email">
           <button class="actializacion__boton" type="submit">SUBSCRIBE</button>
@@ -155,7 +158,14 @@
   <footer class="footer">
     <div class="footer__txs">
       <h3 class="footer__title">Title Here</h3>
-      <p class="footer__p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae cupiditate iste saepe dolore minima ipsum? Praesentium mollitia odio et suscipit aliquam! Quasi!</p>
+      <p class="footer__p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae cupiditate iste saepe dolore
+        minima ipsum? Praesentium mollitia odio et suscipit aliquam! Quasi!</p>
+      <div class="footer__iconos">
+        <i class="fa-brands fa-instagram icono"></i>
+        <i class="fa-brands fa-facebook icono"></i>
+        <i class="fa-brands fa-twitter icono"></i>
+        <i class="fa-brands fa-whatsapp icono"></i>
+      </div>
     </div>
     <div class="footer__list">
       <ul class="footer__list--1">
