--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./estilos/style.css">
   <title>Document</title>
 </head>
 
 <body>
   <header class="header">
-    <img class="header__fondo" src="Sin-título-2.png" alt="">
+    <img class="header__fondo" src="./img/Sin-título-2.png" alt="">
     <nav class="header__navegacion">
       <img src="" alt="">
 
@@ -34,23 +34,23 @@
   <main>
     <section class="section__chef">
       <div class="section__chef--txs">
-        <h1 class="section__chef--title">OUR CHEF</h1>
+        <h1 class="title section__chef--title">OUR CHEF</h1>
         <p class="section__chef--p">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi veniam iure
           ab ad sint doloribus..</p>
       </div>
       <div class="section__chef--cards">
         <div class="chef__cards--1">
-          <img class="card__img" src="Sin-título-8.png" alt="">
+          <img class="card__img" src="./img/Sin-título-8.png" alt="">
           <h3 class="card__title">AIDEN HUNTER</h3>
           <P class="card__txt">Founder</P>
         </div>
         <div class="chef__cards--2">
-          <img class="card__img" src="Sin-título-9.png" alt="">
+          <img class="card__img" src="./img/Sin-título-9.png" alt="">
           <H3 class="card__title">ETHEL RAMSEY</H3>
           <P class="card__txt">Co-Funder</P>
         </div>
         <div class="chef__cards--3">
-          <img class="card__img" src="Sin-título-10.png" alt="">
+          <img class="card__img" src="./img/Sin-título-10.png" alt="">
           <H3 class="card__title">FANNI STEWART</H3>
           <P class="card__txt">Co-Funder</P>
         </div>
@@ -59,7 +59,7 @@
 
     <section class="section__burger">
       <div class="section__burger--relleno">
-        <img src="Sin-título-4.png" alt="">
+        <img src="./img/Sin-título-4.png" alt="">
         <div class="section__burger--txs">
           <h1 class="section__burger--title">Best Burger</h1>
           <p class="section__burger--p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure quasi quae at,
@@ -72,12 +72,12 @@
     <section class="section__hambur">
       <div class="section__hambur--relleno">
         <div class="section__hambur--txs">
-          <h1 class="section__hambur--title">Big Burger</h1>
+          <h1 class="title section__hambur--title">Big Burger</h1>
           <p class="section__hambur--p">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum repellat
             veritatis sequi nam aperiam in.</p>
           <button class="header__button">ORDER NOW</button>
         </div>
-        <img class="section__hambur--img" src="Sin-título-15.png" alt="">
+        <img class="section__hambur--img" src="./img/Sin-título-15.png" alt="">
       </div>
     </section>
 
@@ -89,44 +89,44 @@
       </div>
       <div class="section__estadisticas--cards">
         <div class="section__cards--1">
-          <img src="Sin-título-12.png" alt="">
+          <img src="./img/Sin-título-12.png" alt="">
         </div>
         <div class="section__cards--2">
-          <img src="Sin-título-13.png" alt="">
+          <img src="./img/Sin-título-13.png" alt="">
         </div>
         <div class="section__cards--3">
-          <img src="Sin-título-14.png" alt="">
+          <img src="./img/Sin-título-14.png" alt="">
         </div>
       </div>
     </section>
 
     <section class="section__populares">
       <div class="section__populares--txt">
-        <h1 class="section__populares--title">Popular Packages</h1>
+        <h1 class="title section__populares--title">Popular Packages</h1>
       </div>
       <div class="section__populares--cards">
-        <div class="populares__cards--1">
+        <div class="card populares__cards--1">
           <div class="card__contenido">
             <h3 class="populares__cards--title">PACKAGE I</h3>
-            <img class="populares__cards--img" src="Sin-título-11.png" alt="">
+            <img class="populares__cards--img" src="./img/Sin-título-11.png" alt="">
             <p class="populares__cards--precio">10.00</p>
             <p class="populares__cards--p">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             <button class="populares__cards--boton">ORDER NOW</button>
           </div>
         </div>
-        <div class="populares__cards--2">
+        <div class="card populares__cards--2">
           <div class="card__contenido">
             <h3 class="populares__cards--title">PACKAGE II</h3>
-            <img class="populares__cards--img" src="Sin-título-11.png" alt="">
+            <img class="populares__cards--img" src="./img/Sin-título-11.png" alt="">
             <p class="populares__cards--precio">20.00</p>
             <p class="populares__cards--p">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             <button class="populares__cards--boton">ORDER NOW</button>
           </div>
         </div>
-        <div class="populares__cards--3">
+        <div class="card populares__cards--3">
           <div class="card__contenido">
             <h3 class="populares__cards--title">PACKAGE III</h3>
-            <img class="populares__cards--img" src="Sin-título-11.png" alt="">
+            <img class="populares__cards--img" src="./img/Sin-título-11.png" alt="">
             <p class="populares__cards--precio">30.00</p>
             <p class="populares__cards--p">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
             <button class="populares__cards--boton">ORDER NOW</button>
@@ -145,13 +145,10 @@
 
     <section class="section__actializacion">
       <div class="section__actializacion--txs">
-        <h1 class="section__actializacion--title">Don't Miss Our Update</h1>
+        <h1 class="title section__actializacion--title">Don't Miss Our Update</h1>
         <p class="section__actializacion--p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vivamus lacinia
           odio vitae vestibulum vestibulum</p>
-        <div class="section__actializacion--boton">
-          <input class="actializacion__input--boton" type="email" placeholder="Your Email">
-          <button class="actializacion__boton" type="submit">SUBSCRIBE</button>
-        </div>
+        <img src="./img/Sin-título-17.png" alt="">
       </div>
     </section>
   </main>
