--- a/index.html
+++ b/index.html
@@ -11,24 +11,25 @@
 
 <body>
   <header class="header">
-    <img class="header__fondo" src="./img/Sin-título-2.png" alt="">
-    <nav class="header__navegacion">
-      <img src="" alt="">
-
-      <ul>
-        <li>HOME</li>
-        <li>PRODUCT</li>
-        <li>PROMO</li>
-        <li>ABOUT</li>
-        <li>CONTACT</li>
-      </ul>
-    </nav>
-    <div class="header__txt">
-      <h1 class="header__title">Get cashback up to 50%</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur <br> adipisicing elit. Suspendisse consectetur <br> justo en nunc
-        consequat</p>
-      <button class="header__button">ORDER NOW</button>
+    <div class="header__contenido">
+      <nav class="header__navegacion">
+        <img class="header__navegacion--logo" src="./img/Sin-título-18.png" alt="">
+        <ul class=" header__navegacion--list">
+          <li>HOME</li>
+          <li>PRODUCT</li>
+          <li>PROMO</li>
+          <li>ABOUT</li>
+          <li>CONTACT</li>
+        </ul>
+        </nav>
+        <div class="header__txt">
+          <h1 class="header__txt--title">Get cashback up to 50%</h1>
+          <p class="header__txt--p">Lorem ipsum dolor sit amet, consectetur <br> adipisicing elit. Suspendisse consectetur <br> justo en nunc
+            consequat</p>
+          <button class="header__button">ORDER NOW</button>
+        </div>
     </div>
+    
   </header>
 
   <main>
@@ -39,17 +40,17 @@
           ab ad sint doloribus..</p>
       </div>
       <div class="section__chef--cards">
-        <div class="chef__cards--1">
+        <div class="chef__card chef__cards--1">
           <img class="card__img" src="./img/Sin-título-8.png" alt="">
           <h3 class="card__title">AIDEN HUNTER</h3>
           <P class="card__txt">Founder</P>
         </div>
-        <div class="chef__cards--2">
+        <div class="chef__card chef__cards--2">
           <img class="card__img" src="./img/Sin-título-9.png" alt="">
           <H3 class="card__title">ETHEL RAMSEY</H3>
           <P class="card__txt">Co-Funder</P>
         </div>
-        <div class="chef__cards--3">
+        <div class="chef__card chef__cards--3">
           <img class="card__img" src="./img/Sin-título-10.png" alt="">
           <H3 class="card__title">FANNI STEWART</H3>
           <P class="card__txt">Co-Funder</P>
@@ -59,7 +60,7 @@
 
     <section class="section__burger">
       <div class="section__burger--relleno">
-        <img src="./img/Sin-título-4.png" alt="">
+        <img class="section__burger--img" src="./img/Sin-título-4.png" alt="">
         <div class="section__burger--txs">
           <h1 class="section__burger--title">Best Burger</h1>
           <p class="section__burger--p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure quasi quae at,
@@ -89,13 +90,13 @@
       </div>
       <div class="section__estadisticas--cards">
         <div class="section__cards--1">
-          <img src="./img/Sin-título-12.png" alt="">
+          <img class="section__estadisticas--img" src="./img/Sin-título-12.png" alt="">
         </div>
         <div class="section__cards--2">
-          <img src="./img/Sin-título-13.png" alt="">
+          <img class="section__estadisticas--img" src="./img/Sin-título-13.png" alt="">
         </div>
         <div class="section__cards--3">
-          <img src="./img/Sin-título-14.png" alt="">
+          <img class="section__estadisticas--img" src="./img/Sin-título-14.png" alt="">
         </div>
       </div>
     </section>
@@ -165,7 +166,7 @@
       </div>
     </div>
     <div class="footer__list">
-      <ul class="footer__list--1">
+      <ul class="list footer__list--1">
         <li><b>About</b></li>
         <li>History</li>
         <li>Our Team</li>
@@ -173,7 +174,7 @@
         <li>Terms & Condition</li>
         <li>Privacy Policy</li>
       </ul>
-      <ul class="footer__list--2">
+      <ul class="list footer__list--2">
         <li><b>Services</b></li>
         <li>How to Order</li>
         <li>Our Product</li>
@@ -181,7 +182,7 @@
         <li>Promo</li>
         <li>Payment Method</li>
       </ul>
-      <ul class="footer__list--3">
+      <ul class="list footer__list--3">
         <li><b>Other</b></li>
         <li>Contact Us</li>
         <li>Help</li>
