--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         <h1 class="title section__actializacion--title">Don't Miss Our Update</h1>
         <p class="section__actializacion--p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vivamus lacinia
           odio vitae vestibulum vestibulum</p>
-        <img src="./img/Sin-título-17.png" alt="">
+        <img class="section__actializacion--img" src="./img/Sin-título-17.png" alt="">
       </div>
     </section>
   </main>
