--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <header class="header">
-    <div class="header__contenido">
+    <nav class="header__contenido">
       <nav class="header__navegacion">
         <img class="header__navegacion--logo" src="./img/Sin-título-18.png" alt="">
         <ul class=" header__navegacion--list">
@@ -21,15 +21,14 @@
           <li>ABOUT</li>
           <li>CONTACT</li>
         </ul>
-        </nav>
+      </nav>
         <div class="header__txt">
           <h1 class="header__txt--title">Get cashback up to 50%</h1>
           <p class="header__txt--p">Lorem ipsum dolor sit amet, consectetur <br> adipisicing elit. Suspendisse consectetur <br> justo en nunc
             consequat</p>
           <button class="header__button">ORDER NOW</button>
         </div>
-    </div>
-    
+    </nav>  
   </header>
 
   <main>
